--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     // Load remote images from the network into image views
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.makeramen:roundedimageview:2.0.1'
+}
+
+repositories {
+    mavenCentral()
 }
